test(certif-domain-tests): corrections tests auto via qwen2.5-coder-7b