@@ -1,12 +1,7 @@
 package com.certifapp.domain.model.question;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.OffsetDateTime;
 import java.util.Arrays;
@@ -16,19 +11,12 @@ import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.when;
 
-@ExtendWith(MockitoExtension.class)
 public class QuestionTest {
 
-    @Mock
-    private List<QuestionOption> options;
-
-    @InjectMocks
-    private Question question;
-
-    @BeforeEach
-    public void setUp() {
+    @Test
+    @DisplayName("nominal case - correctOption should return the correct option")
+    public void correctOption_nominal() {
         UUID id = UUID.randomUUID();
         String legacyId = "OCP21-VT-001";
         String certificationId = "ocp21";
@@ -37,14 +25,14 @@ public class QuestionTest {
         DifficultyLevel difficulty = DifficultyLevel.EASY;
         QuestionType type = QuestionType.SINGLE_CHOICE;
         List<QuestionOption> optionsList = Arrays.asList(
-                new QuestionOption(UUID.randomUUID(), false, "Paris"),
-                new QuestionOption(UUID.randomUUID(), true, "London")
+                QuestionOption.of('a', "text", false, 1),
+                QuestionOption.of('b', "text", true, 2)
         );
         String explanationOriginal = "The capital of France is Paris.";
         ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
         OffsetDateTime lastReviewedAt = OffsetDateTime.now();
 
-        question = new Question(
+        Question question = new Question(
                 id,
                 legacyId,
                 certificationId,
@@ -62,28 +50,92 @@ public class QuestionTest {
                 true,
                 lastReviewedAt
         );
-    }
 
-    @Test
-    @DisplayName("nominal case - correctOption should return the correct option")
-    public void correctOption_nominal() {
         Optional<QuestionOption> result = question.correctOption();
         assertThat(result).isPresent().hasValueSatisfying(option ->
-                assertThat(option.id()).isEqualTo(question.options.get(1).id())
+                assertThat(option.id()).isEqualTo(question.options().get(1).id())
         );
     }
 
     @Test
     @DisplayName("nominal case - correctOptions should return a list of all correct options")
     public void correctOptions_nominal() {
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
+                QuestionOption.of('a', "text", false, 1),
+                QuestionOption.of('b', "text", true, 2)
+        );
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
+
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                null,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
+
         List<QuestionOption> result = question.correctOptions();
         assertThat(result).hasSize(1)
-                .containsExactly(question.options.get(1));
+                .containsExactly(question.options().get(1));
     }
 
     @Test
     @DisplayName("nominal case - findOption should return the matching option")
     public void findOption_nominal() {
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
+                QuestionOption.of('a', "text", false, 1),
+                QuestionOption.of('b', "text", true, 2)
+        );
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
+
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                null,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
+
         UUID optionId = question.options().get(0).id();
         Optional<QuestionOption> result = question.findOption(optionId);
         assertThat(result).isPresent().hasValueSatisfying(option ->
@@ -94,10 +146,40 @@ public class QuestionTest {
     @Test
     @DisplayName("nominal case - bestExplanation should return the enriched explanation if available and validated")
     public void bestExplanation_enrichedValidated() {
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
+                QuestionOption.of('a', "text", false, 1),
+                QuestionOption.of('b', "text", true, 2)
+        );
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
         String enrichedExplanation = "Enriched: The capital of France is Paris.";
-        when(question.explanationEnriched()).thenReturn(enrichedExplanation);
-        ExplanationStatus status = ExplanationStatus.HUMAN_VALIDATED;
-        when(question.explanationStatus()).thenReturn(status);
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
+
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                enrichedExplanation,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
 
         String result = question.bestExplanation();
         assertThat(result).isEqualTo(enrichedExplanation);
@@ -106,23 +188,81 @@ public class QuestionTest {
     @Test
     @DisplayName("nominal case - bestExplanation should return the original explanation if enriched is null or blank")
     public void bestExplanation_original() {
-        when(question.explanationEnriched()).thenReturn(null);
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
+                QuestionOption.of('a', "text", false, 1),
+                QuestionOption.of('b', "text", true, 2)
+        );
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
+
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                null,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
+
         String result = question.bestExplanation();
-        assertThat(result).isEqualTo(question.explanationOriginal());
+        assertThat(result).isEqualTo(explanationOriginal);
     }
 
     @Test
     @DisplayName("edge case - correctOption should return empty if no option is marked correct")
     public void correctOption_edgeNoCorrect() {
-        // Create real options with isCorrect = false
-        List<QuestionOption> options = List.of(
-                QuestionOption.of('A', "First option", false, 0),
-                QuestionOption.of('B', "Second option", false, 1),
-                QuestionOption.of('C', "Third option", false, 2)
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
+                QuestionOption.of('a', "First option", false, 0),
+                QuestionOption.of('b', "Second option", false, 1),
+                QuestionOption.of('c', "Third option", false, 2)
         );
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
 
-        // Assuming Question has a constructor or setter for options
-        Question question = new Question( options);
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                null,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
 
         Optional<QuestionOption> result = question.correctOption();
         assertThat(result).isEmpty();
@@ -131,11 +271,39 @@ public class QuestionTest {
     @Test
     @DisplayName("edge case - correctOptions should return an empty list if no options are marked correct")
     public void correctOptions_edgeNoCorrect() {
-        List<QuestionOption> options = List.of(
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
                 new QuestionOption("A", false),
                 new QuestionOption("B", false)
         );
-        Question question = new Question(/* ... */, options);
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
+
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                null,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
 
         List<QuestionOption> result = question.correctOptions();
         assertThat(result).isEmpty();
@@ -144,6 +312,41 @@ public class QuestionTest {
     @Test
     @DisplayName("edge case - findOption should return empty if no option matches the ID")
     public void findOption_edgeNoMatch() {
+        UUID id = UUID.randomUUID();
+        String legacyId = "OCP21-VT-001";
+        String certificationId = "ocp21";
+        UUID themeId = UUID.randomUUID();
+        String statement = "What is the capital of France?";
+        DifficultyLevel difficulty = DifficultyLevel.EASY;
+        QuestionType type = QuestionType.SINGLE_CHOICE;
+        List<QuestionOption> optionsList = Arrays.asList(
+                QuestionOption.of('a', "First option", false, 0),
+                QuestionOption.of('b', "Second option", false, 1),
+                QuestionOption.of('c', "Third option", false, 2)
+        );
+        String explanationOriginal = "The capital of France is Paris.";
+        ExplanationStatus explanationStatus = ExplanationStatus.HUMAN_VALIDATED;
+        OffsetDateTime lastReviewedAt = OffsetDateTime.now();
+
+        Question question = new Question(
+                id,
+                legacyId,
+                certificationId,
+                themeId,
+                statement,
+                difficulty,
+                type,
+                optionsList,
+                explanationOriginal,
+                null,
+                explanationStatus,
+                null,
+                null,
+                1.0,
+                true,
+                lastReviewedAt
+        );
+
         UUID nonExistentId = UUID.randomUUID();
         Optional<QuestionOption> result = question.findOption(nonExistentId);
         assertThat(result).isEmpty();
@@ -286,7 +489,7 @@ public class QuestionTest {
                         "What is the capital of France?",
                         DifficultyLevel.EASY,
                         QuestionType.SINGLE_CHOICE,
-                        List.of(QuestionOption.of(UUID.randomUUID(), false, "Paris",1)),
+                        List.of(QuestionOption.of(UUID.randomUUID(), false, "Paris", 1)),
                         "The capital of France is Paris.",
                         null,
                         null,
@@ -346,4 +549,3 @@ public class QuestionTest {
         );
     }
 }
-
